--- a/Dido_Store_2/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -238,10 +238,10 @@
                     <!-- /input-group -->
                 </li>
                 <li>
-                    <a href="/Admin/Home/Index"><i class="fa fa-dashboard fa-fw"></i> Trang chủ</a>
+                    <a href="/Admin/Home/Index"><i class="fa fa-home fa-fw"></i> Trang chủ</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Sản phẩm<span class="fa arrow"></span></a>
+                    <a href="#"><i class="fa fa-product-hunt fa-fw"></i> Sản phẩm<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
                             <a href="/Admin/Branch/Index">Danh mục</a>
@@ -253,16 +253,16 @@
                     <!-- /.nav-second-level -->
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Người dùng</a>
+                    <a href="/Admin/User/"><i class="fa fa-users fa-fw"></i> Người dùng</a>
 
                     <!-- /.nav-second-level -->
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Bình luận</a>
+                    <a href="/Admin/Comment/"><i class="fa fa-comment fa-fw"></i> Bình luận</a>
 
                     <!-- /.nav-second-level -->
                 </li><li>
-                    <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Hệ thống</a>
+                    <a href="#"><i class="fa fa-gear fa-fw"></i> Hệ thống</a>
 
                     <!-- /.nav-second-level -->
                 </li>
