--- a/Dido_Store_2/Areas/Admin/Views/User/Index.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/User/Index.cshtml
@@ -18,7 +18,7 @@
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
-                @*<div class="row">
+                <div class="row">
                     @using(Html.BeginForm("Index", "User", FormMethod.Get))
                     {
                         <div class="form-group">
@@ -31,7 +31,7 @@
                         </div>
                     }
 
-                </div>*@
+                </div>
                 <p></p>
 
                 <div class="table-responsive">
