--- a/Dido_Store_2/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">@RenderSection("header", true)</h1>
+                    <h1 class="page-header">@RenderSection("header", false)</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
