--- a/Dido_Store_2/Areas/Admin/Views/Branch/Create.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Branch/Create.cshtml
@@ -67,11 +67,11 @@
                                 </div>
 
                                 <div class="form-group">
-                                    @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-3" })
+                                    @Html.Label("Tình trạng", htmlAttributes: new { @class = "control-label col-md-3" })
                                     <div class="col-md-9">
                                         <div class="checkbox">
-                                            @Html.DropDownListFor(model => model.Status, new SelectList((new List<bool> { true, false })), new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+                                            @Html.DropDownList("Status", ViewBag.Status as SelectList, new { @class = "form-control" })
+                                            @Html.ValidationMessage("Status", "", new { @class = "text-danger" })
                                         </div>
                                     </div>
                                 </div>
