--- a/Dido_Store_2/Areas/Admin/Views/Branch/Edit.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Branch/Edit.cshtml
@@ -32,6 +32,9 @@
                 Nhập thông tin hãng
             </div>
             <div class="panel-body">
+
+
+
                 <div class="row">
                     <div class="col-lg-8 col-md-offset-2">
                         @using(Html.BeginForm("Edit", "Branch", FormMethod.Post))
@@ -78,11 +81,11 @@
                                 </div>
 
                                 <div class="form-group">
-                                    @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-3" })
+                                    @Html.Label("Tình trạng", htmlAttributes: new { @class = "control-label col-md-3" })
                                     <div class="col-md-9">
                                         <div class="checkbox">
-                                            @Html.DropDownListFor(model => model.Status, new SelectList((new List<bool> { true, false })), new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+                                            @Html.DropDownList("Status", ViewBag.Status as SelectList, new { @class = "form-control" })
+                                            @Html.ValidationMessage("Status", "", new { @class = "text-danger" })
                                         </div>
                                     </div>
                                 </div>
