--- a/Dido_Store_2/Views/Shared/_Layout.cshtml
+++ b/Dido_Store_2/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
                                     <div class="shopping-cart-list">
                                         <div class="product product-widget">
                                             <div class="product-thumb">
-                                                <img src="./img/thumb-product01.jpg" alt="">
+                                                <img src="/Assets/client/img/thumb-product01.jpg" alt="">
                                             </div>
                                             <div class="product-body">
                                                 <h3 class="product-price">$32.50 <span class="qty">x3</span></h3>
@@ -144,7 +144,7 @@
                                         </div>
                                         <div class="product product-widget">
                                             <div class="product-thumb">
-                                                <img src="./img/thumb-product01.jpg" alt="">
+                                                <img src="/Assets/client/img/thumb-product01.jpg" alt="">
                                             </div>
                                             <div class="product-body">
                                                 <h3 class="product-price">$32.50 <span class="qty">x3</span></h3>
@@ -230,7 +230,7 @@
                                     <div class="col-md-12">
                                         <hr>
                                         <a class="banner banner-1" href="#">
-                                            <img src="./img/banner05.jpg" alt="">
+                                            <img src="/Assets/client/img/banner05.jpg" alt="">
                                             <div class="banner-caption text-center">
                                                 <h2 class="white-color">NEW COLLECTION</h2>
                                                 <h3 class="white-color font-weak">HOT DEAL</h3>
@@ -294,7 +294,7 @@
                                     </div>
                                     <div class="col-md-4 hidden-sm hidden-xs">
                                         <a class="banner banner-2" href="#">
-                                            <img src="./img/banner04.jpg" alt="">
+                                            <img src="/Assets/client/img/banner04.jpg" alt="">
                                             <div class="banner-caption">
                                                 <h3 class="white-color">NEW<br>COLLECTION</h3>
                                             </div>
@@ -441,7 +441,7 @@
                                     <div class="col-md-12">
                                         <hr>
                                         <a class="banner banner-1" href="#">
-                                            <img src="./img/banner05.jpg" alt="">
+                                            <img src="/Assets/client/img/banner05.jpg" alt="">
                                             <div class="banner-caption text-center">
                                                 <h2 class="white-color">NEW COLLECTION</h2>
                                                 <h3 class="white-color font-weak">HOT DEAL</h3>
@@ -458,7 +458,7 @@
                                     <div class="col-md-3">
                                         <div class="hidden-sm hidden-xs">
                                             <a class="banner banner-1" href="#">
-                                                <img src="./img/banner06.jpg" alt="">
+                                                <img src="/Assets/client/img/banner06.jpg" alt="">
                                                 <div class="banner-caption text-center">
                                                     <h3 class="white-color text-uppercase">Women’s</h3>
                                                 </div>
@@ -479,7 +479,7 @@
                                     <div class="col-md-3">
                                         <div class="hidden-sm hidden-xs">
                                             <a class="banner banner-1" href="#">
-                                                <img src="./img/banner07.jpg" alt="">
+                                                <img src="/Assets/client/img/banner07.jpg" alt="">
                                                 <div class="banner-caption text-center">
                                                     <h3 class="white-color text-uppercase">Men’s</h3>
                                                 </div>
@@ -500,7 +500,7 @@
                                     <div class="col-md-3">
                                         <div class="hidden-sm hidden-xs">
                                             <a class="banner banner-1" href="#">
-                                                <img src="./img/banner08.jpg" alt="">
+                                                <img src="/Assets/client/img/banner08.jpg" alt="">
                                                 <div class="banner-caption text-center">
                                                     <h3 class="white-color text-uppercase">Accessories</h3>
                                                 </div>
@@ -521,7 +521,7 @@
                                     <div class="col-md-3">
                                         <div class="hidden-sm hidden-xs">
                                             <a class="banner banner-1" href="#">
-                                                <img src="./img/banner09.jpg" alt="">
+                                                <img src="/Assets/client/img/banner09.jpg" alt="">
                                                 <div class="banner-caption text-center">
                                                     <h3 class="white-color text-uppercase">Bags</h3>
                                                 </div>
@@ -588,7 +588,7 @@
                         <!-- footer logo -->
                         <div class="footer-logo">
                             <a class="logo" href="#">
-                                <img src="./img/logo.png" alt="">
+                                <img src="/Assets/client/img/logo.png" alt="">
                             </a>
                         </div>
                         <!-- /footer logo -->
