--- a/Dido_Store_2/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -50,6 +50,14 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
+            @if(TempData["AlertMessage"] != null)
+            {
+                <div id="AlertBox" class="alert @TempData["AlertType"]">
+                    @TempData["AlertMessage"]
+                </div>
+            }
+
+
             @RenderBody()
         </div>
         <!-- /#page-wrapper -->
