add alert to UserController

--- a/Dido_Store_2/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
             </div>
             @if(TempData["AlertMessage"] != null)
             {
-                <div id="AlertBox" class="alert @TempData["AlertType"]">
+                <div id="AlertBox" class="alert @TempData["AlertType"] hide">
                     @TempData["AlertMessage"]
                 </div>
             }
