--- a/Dido_Store_2/Areas/Admin/Views/Product/Index.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Product/Index.cshtml
@@ -8,11 +8,16 @@
     Danh sách sản phẩm
 }
 
+@section jsFooter{
+
+    <script src="~/Assets/admin/dist/js/controller/productController.js"></script>
+}
+
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Danh sách người dùng
+                Danh sách sản phẩm
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
@@ -21,7 +26,10 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>Tài khoản</th>
+                                <th>Tên sản phẩm</th>
+                                <th>Giá</th>
+                                <th>Ngày tạo</th>
+                                <th>Tình trạng</th>
                                 <th>#</th>
                             </tr>
                         </thead>
@@ -31,6 +39,15 @@
                             {
                                 <tr id="row_@item.ID">
                                     <td>@item.Name</td>
+                                    <td>@item.Price</td>
+                                    <td>@item.CreatedDate</td>
+                                    <td>
+                                        <a href="#" data-id="@item.ID" class="btn-active">@(item.Status == true ? "Kích họat" : "Khóa")</a>
+                                    </td>
+                                    <td>
+                                        <a href="/Admin/Product/Edit/@item.ID">Sửa</a>/
+                                        <a href="/Admin/Product/Edit/@item.ID">Xóa</a>
+                                    </td>
                                 </tr>
                             }
 
@@ -41,8 +58,8 @@
                 </div>
 
             </div>
-                <!-- /.panel-body -->
-            </div>
+            <!-- /.panel-body -->
+        </div>
         <!-- /.panel -->
     </div>
     <!-- /.col-lg-6 -->
