--- a/Dido_Store_2/Views/Home/Index.cshtml
+++ b/Dido_Store_2/Views/Home/Index.cshtml
@@ -9,7 +9,9 @@
 @section slide{
     <div class="header_slide">
         <div class="header_bottom_left">
-            @{ Html.RenderAction("Branch", "Product");}
+            <div class="categories">
+                @{ Html.RenderAction("Branch", "Product");}
+            </div>
         </div>
         <div class="header_bottom_right">
             <div class="slider">
