--- a/Dido_Store_2/Views/Product/Detail.cshtml
+++ b/Dido_Store_2/Views/Product/Detail.cshtml
@@ -2,12 +2,14 @@
 @{
     ViewBag.Title = "Detail";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var branch = (Model.EF.Branch)ViewBag.Branch;
+    var relatedProducts = (List<Model.EF.Product>)ViewBag.RelatedProduct;
 }
 
 <div class="content">
     <div class="content_top">
         <div class="back-links">
-            <p><a href="index.html">Home</a> >>>> <a href="#">Electronics</a></p>
+            <p><a href="/">Trang chủ</a> >>>> <a href="/san-pham/@branch.Alias-@branch.ID">@branch.BranchName</a></p>
         </div>
         <div class="clear"></div>
     </div>
@@ -19,12 +21,7 @@
                         <div id="products_example">
                             <div id="products">
                                 <div class="slides_container">
-                                    <a href="#" target="_blank"><img src="images/productslide-1.jpg" alt=" " /></a>
-                                    <a href="#" target="_blank"><img src="images/productslide-2.jpg" alt=" " /></a>
-                                    <a href="#" target="_blank"><img src="images/productslide-3.jpg" alt=" " /></a>
-                                    <a href="#" target="_blank"><img src="images/productslide-4.jpg" alt=" " /></a>
-                                    <a href="#" target="_blank"><img src="images/productslide-5.jpg" alt=" " /></a>
-                                    <a href="#" target="_blank"><img src="images/productslide-6.jpg" alt=" " /></a>
+                                    <a href="#" target="_blank"><img src="@Model.Image" alt=" " /></a>
                                 </div>
                                 <ul class="pagination">
                                     <li><a href="#"><img src="images/thumbnailslide-1.jpg" alt=" " /></a></li>
@@ -39,46 +36,14 @@
                     </div>
                 </div>
                 <div class="desc span_3_of_2">
-                    <h2>Lorem Ipsum is simply dummy text </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                    <h2>@Model.Name</h2>
+                    <p>@Model.Description</p>
                     <div class="price">
-                        <p>Price: <span>$500</span></p>
-                    </div>
-                    <div class="available">
-                        <p>Available Options :</p>
-                        <ul>
-                            <li>
-                                Color:
-                                <select>
-                                    <option>Silver</option>
-                                    <option>Black</option>
-                                    <option>Dark Black</option>
-                                    <option>Red</option>
-                                </select>
-                            </li>
-                            <li>
-                                Size:<select>
-                                    <option>Large</option>
-                                    <option>Medium</option>
-                                    <option>small</option>
-                                    <option>Large</option>
-                                    <option>small</option>
-                                </select>
-                            </li>
-                            <li>
-                                Quality:<select>
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
-                                </select>
-                            </li>
-                        </ul>
+                        <p>Giá: <span>@(Model.Price.HasValue ? Model.Price.Value.ToString("N0") : "Liên hệ")<u>đ</u></span></p>
                     </div>
                     <div class="share-desc">
                         <div class="share">
-                            <p>Share Product :</p>
+                            <p>Chia sẻ :</p>
                             <ul>
                                 <li><a href="#"><img src="images/facebook.png" alt="" /></a></li>
                                 <li><a href="#"><img src="images/twitter.png" alt="" /></a></li>
@@ -89,8 +54,8 @@
                     </div>
                     <div class="wish-list">
                         <ul>
-                            <li class="wish"><a href="#">Add to Wishlist</a></li>
-                            <li class="compare"><a href="#">Add to Compare</a></li>
+                            <li class="wish"><a href="#">Thêm vào yêu thích</a></li>
+                            <li class="compare"><a href="#">Thêm vào so sánh</a></li>
                         </ul>
                     </div>
                 </div>
@@ -99,16 +64,12 @@
             <div class="product_desc">
                 <div id="horizontalTab">
                     <ul class="resp-tabs-list">
-                        <li>Product Details</li>
-                        <li>product Tags</li>
-                        <li>Product Reviews</li>
+                        <li>Chi tiết</li>
                         <div class="clear"></div>
                     </ul>
                     <div class="resp-tabs-container">
                         <div class="product-desc">
-                            <p>Lorem Ipsum is simply dummy text of the <span>printing and typesetting industry</span>. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, <span>when an unknown printer took a galley of type and scrambled</span> it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<span> It has survived not only five centuries</span>, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                            @Html.Raw(Model.Content)
                         </div>
 
                         <div class="product-tags">
@@ -154,78 +115,42 @@
                 </div>
             </div>
             <script type="text/javascript">
-    $(document).ready(function () {
-        $('#horizontalTab').easyResponsiveTabs({
-            type: 'default', //Types: default, vertical, accordion
-            width: 'auto', //auto or any width like 600px
-            fit: true   // 100% fit in a container
-        });
-    });
+                $(document).ready(function () {
+                    $('#horizontalTab').easyResponsiveTabs({
+                        type: 'default', //Types: default, vertical, accordion
+                        width: 'auto', //auto or any width like 600px
+                        fit: true   // 100% fit in a container
+                    });
+                });
             </script>
             <div class="content_bottom">
                 <div class="heading">
-                    <h3>Related Products</h3>
+                    <h3>Sản phẩm liên quan</h3>
                 </div>
                 <div class="see">
-                    <p><a href="#">See all Products</a></p>
+                    <p><a href="/san-pham">Xem tất cả sản phẩm</a></p>
                 </div>
                 <div class="clear"></div>
             </div>
             <div class="section group">
-                <div class="grid_1_of_4 images_1_of_4">
-                    <a href="#"><img src="images/new-pic1.jpg" alt=""></a>
-                    <div class="price" style="border:none">
-                        <div class="add-cart" style="float:none">
-                            <h4><a href="#">Add to Cart</a></h4>
+                @foreach (var item in relatedProducts)
+                {
+                    var url = "/chi-tiet/" + item.Alias + "-" + item.ID;
+                    <div class="grid_1_of_4 images_1_of_4">
+                        <a href="@url"><img src="@item.Image" alt=""></a>
+                        <div class="price" style="border:none">
+                            <div class="add-cart" style="float:none">
+                                <h4><a href="@url">Add to Cart</a></h4>
+                            </div>
+                            <div class="clear"></div>
                         </div>
-                        <div class="clear"></div>
                     </div>
-                </div>
-                <div class="grid_1_of_4 images_1_of_4">
-                    <a href="#"><img src="images/new-pic2.jpg" alt=""></a>
-                    <div class="price" style="border:none">
-                        <div class="add-cart" style="float:none">
-                            <h4><a href="#">Add to Cart</a></h4>
-                        </div>
-                        <div class="clear"></div>
-                    </div>
-                </div>
-                <div class="grid_1_of_4 images_1_of_4">
-                    <a href="#"><img src="images/new-pic4.jpg" alt=""></a>
-                    <div class="price" style="border:none">
-                        <div class="add-cart" style="float:none">
-                            <h4><a href="#">Add to Cart</a></h4>
-                        </div>
-                        <div class="clear"></div>
-                    </div>
-                </div>
-                <div class="grid_1_of_4 images_1_of_4">
-                    <img src="images/new-pic3.jpg" alt="">
-                    <div class="price" style="border:none">
-                        <div class="add-cart" style="float:none">
-                            <h4><a href="#">Add to Cart</a></h4>
-                        </div>
-                        <div class="clear"></div>
-                    </div>
-                </div>
+                }
             </div>
         </div>
         <div class="rightsidebar span_3_of_1">
-            <h2>CATEGORIES</h2>
-            <ul class="side-w3ls">
-                <li><a href="#">Mobile Phones</a></li>
-                <li><a href="#">Desktop</a></li>
-                <li><a href="#">Laptop</a></li>
-                <li><a href="#">Accessories</a></li>
-                <li><a href="#">Software</a></li>
-                <li><a href="#">Sports &amp; Fitness</a></li>
-                <li><a href="#">Footwear</a></li>
-                <li><a href="#">Jewellery</a></li>
-                <li><a href="#">Clothing</a></li>
-                <li><a href="#">Home Decor &amp; Kitchen</a></li>
-                <li><a href="#">Beauty &amp; Healthcare</a></li>
-                <li><a href="#">Toys, Kids &amp; Babies</a></li>
-            </ul>
+            <h2>Danh mục sản phẩm</h2>
+            @{ Html.RenderAction("Branch", "Product");}
             <div class="subscribe">
                 <h2>Newsletters Signup</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.......</p>
