--- a/Dido_Store_2/Views/Shared/_Layout.cshtml
+++ b/Dido_Store_2/Views/Shared/_Layout.cshtml
@@ -12,6 +12,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="/Assets/client/css/style.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/Assets/client/css/slider.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/Assets/client/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="/Assets/client/css/font-awesome.min.css" rel="stylesheet" />
     <script type="text/javascript" src="/Assets/client/js/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="/Assets/client/js/move-top.js"></script>
     <script type="text/javascript" src="/Assets/client/js/easing.js"></script>
