--- a/Dido_Store_2/Areas/Admin/Views/Branch/Index.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Branch/Index.cshtml
@@ -27,14 +27,17 @@
                 <div class="row">
                     @using(Html.BeginForm("Index", "Branch", FormMethod.Get))
                     {
-                        <div class="form-group">
-                            <div class="col-md-4 col-md-offset-6">
-                                <input type="text" name="searchString" placeholder="Nhập giá trị tìm kiếm" class="form-control" value="@ViewBag.searchString" />
-                            </div>
-                            <div class="col-md-2">
-                                <input type="submit" name="name" class="btn btn-info btn-block btn-outline" value="Tìm kiếm" />
-                            </div>
+                    <div class="form-group">
+                        <div class="col-md-2">
+                            <a href="/Admin/Branch/Create" class="btn btn-primary btn-block btn-outline">Thêm mới</a>
                         </div>
+                        <div class="col-md-4 col-md-offset-4">
+                            <input type="text" name="searchString" placeholder="Nhập giá trị tìm kiếm" class="form-control" value="@ViewBag.searchString" />
+                        </div>
+                        <div class="col-md-2">
+                            <input type="submit" name="name" class="btn btn-info btn-block btn-outline" value="Tìm kiếm" />
+                        </div>
+                    </div>
                     }
 
                 </div>
@@ -46,7 +49,7 @@
                             <tr>
                                 <th>Tên</th>
                                 <th>Ngày tạo</th>
-                                <th>Tình trạng</th>
+                                <th>Ảnh</th>
                                 <th>Thứ tự hiển thị</th>
                                 <th>Tình trạng</th>
                                 <th>#</th>
