--- a/Dido_Store_2/Areas/Admin/Views/Product/Index.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Product/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@model IEnumerable<Model.EF.Product>
+﻿@model PagedList.IPagedList<Model.EF.Product>
+@using PagedList.Mvc;
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+                ViewBag.Title = "Index";
+                Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 @section header{
@@ -9,7 +10,6 @@
 }
 
 @section jsFooter{
-
     <script src="~/Assets/admin/dist/js/controller/productController.js"></script>
 }
 
@@ -21,6 +21,25 @@
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
+
+                <div class="row">
+                    @using(Html.BeginForm("Index", "Product", FormMethod.Get))
+                    {
+                    <div class="form-group">
+                        <div class="col-md-2">
+                            <a href="/Admin/Product/Create" class="btn btn-primary btn-block btn-outline">Thêm mới</a>
+                        </div>
+                        <div class="col-md-4 col-md-offset-4">
+                            <input type="text" name="searchString" placeholder="Nhập giá trị tìm kiếm" class="form-control" value="@ViewBag.searchString" />
+                        </div>
+                        <div class="col-md-2">
+                            <input type="submit" name="name" class="btn btn-info btn-block btn-outline" value="Tìm kiếm" />
+                        </div>
+                    </div>
+                    }
+
+                </div>
+                <p></p>
 
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
@@ -40,7 +59,7 @@
                                 <tr id="row_@item.ID">
                                     <td>@item.Name</td>
                                     <td>@item.Price</td>
-                                    <td>@item.CreatedDate</td>
+                                    <td>@(item.CreatedDate!=null ?item.CreatedDate.Value.ToString("dd/MM/yyyy"):"")</td>
                                     <td>
                                         <a href="#" data-id="@item.ID" class="btn-active">@(item.Status == true ? "Kích họat" : "Khóa")</a>
                                     </td>
@@ -54,7 +73,7 @@
                         </tbody>
                     </table>
 
-
+                    @Html.PagedListPager(Model, Page => Url.Action("Index", new { Page }))
                 </div>
 
             </div>
