--- a/Dido_Store_2/Areas/Admin/Views/User/Edit.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/User/Edit.cshtml
@@ -99,10 +99,10 @@
                                 </div>
 
                                 <div class="form-group">
-                                    @Html.LabelFor(model => model.Status, new { @class = "control-label col-md-4" })
+                                    @Html.Label("Tình trạng", new { @class = "control-label col-md-4" })
                                     <div class="col-md-8">
-                                        @Html.CheckBoxFor(model => model.Status, new { @class = " form-control", @checked = "true" })
-                                        @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+                                        @Html.DropDownList("Status", ViewBag.Status as SelectList, new { @class = " form-control"})
+                                        @Html.ValidationMessage("Status", "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="form-group">
