--- a/Dido_Store_2/Views/Shared/_Layout.cshtml
+++ b/Dido_Store_2/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             </div>
             <div class="header_top">
                 <div class="logo">
-                    <a href="index.html"><img src="~/Assets/client/images/logo.jpg" alt="" /></a>
+                    <a href="/Home/Index"><img src="~/Assets/client/images/logo.jpg" alt="" /></a>
                 </div>
                 <div class="cart">
                     <p>
