--- a/Dido_Store_2/Views/Product/Detail.cshtml
+++ b/Dido_Store_2/Views/Product/Detail.cshtml
@@ -46,7 +46,7 @@
                             <p>Chia sẻ :</p>
                             <div class="fb-share-button" data-href="/chi-tiet/@Model.Alias-@Model.ID" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Chia sẻ</a></div>
                         </div>
-                        <div class="button"><span><a href="gio-hang/">Thêm vào giỏ</a></span></div>
+                        <div class="button"><span><a href="/them-gio-hang?productID=@Model.ID&quantity=1">Thêm vào giỏ</a></span></div>
                         <div class="clear"></div>
                     </div>
                     @*<div class="wish-list">
@@ -137,7 +137,7 @@
                         <a href="@url"><img src="@item.Image" alt=""></a>
                         <div class="price" style="border:none">
                             <div class="add-cart" style="float:none">
-                                <h4><a href="@url">Add to Cart</a></h4>
+                                <h4><a href="/them-gio-hang?productID=@item.ID&quantity=1">Add to Cart</a></h4>
                             </div>
                             <div class="clear"></div>
                         </div>
