--- a/Dido_Store_2/Views/Product/ProductBranch.cshtml
+++ b/Dido_Store_2/Views/Product/ProductBranch.cshtml
@@ -28,7 +28,7 @@
                         <p><span class="rupees">@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")<u>đ</u></span></p>
                     </div>
                     <div class="add-cart">
-                        <h4><a href="/gio-hang/@item.ID">Thêm vào giỏ</a></h4>
+                        <h4><a href="/them-gio-hang?productID=@item.ID&quantity=1">Thêm vào giỏ</a></h4>
                     </div>
                 </div>
 
@@ -46,29 +46,31 @@
             var endPageIndex = Math.Min(totalPage, currentPage + pageDisplay / 2);
             var link = "/san-pham/" + branch.Alias + "-" + branch.ID;
             <nav>
-                <ul class="pagination  justify-content-end">
-                    @if(currentPage > ViewBag.First)
-                    {
-                        <li class="page-item"><a href="@link?page=@ViewBag.First" title="Trang đầu" >Đầu</a></li>
-                        <li class="page-item"><a href="@link?page=@ViewBag.Prev" title="Trang trước" c><i class="fa fa-angle-left"></i></a></li>
-                    }
-                    @for(int i = startPageIndex; i <= endPageIndex; i++)
-                    {
-                        if(currentPage == i)
+                @*<ul class="pagination  justify-content-end">*@
+                    <div class="content-pagenation">
+                        @if(currentPage > ViewBag.First)
                         {
-                            <li class="page-item active"><a href="@link?page=@i" title="Trang @i">@i</a></li>
+                            <li class="page-item"><a href="@link?page=@ViewBag.First" title="Trang đầu">Đầu</a></li>
+                            <li class="page-item"><a href="@link?page=@ViewBag.Prev" title="Trang trước" c><i class="fa fa-angle-left"></i></a></li>
                         }
-                        else
+                        @for(int i = startPageIndex; i <= endPageIndex; i++)
                         {
-                            <li class="page-item"><a href="@link?page=@i"  title="Trang @i">@i</a></li>
+                            if(currentPage == i)
+                            {
+                                <li class="page-item active"><a href="@link?page=@i" title="Trang @i">@i</a></li>
+                            }
+                            else
+                            {
+                                <li class="page-item"><a href="@link?page=@i" title="Trang @i">@i</a></li>
+                            }
                         }
-                    }
-                    @if(currentPage < totalPage)
-                    {
-                        <li class="page-item"><a href="@link?page=@ViewBag.Next"  title="Trang sau"><i class="fa fa-angle-right"></i></a></li>
-                        <li class="page-item"><a href="@link?page=@ViewBag.Last"  title="Trang cuối">Cuối</a></li>
-                    }
-                </ul>
+                        @if(currentPage < totalPage)
+                        {
+                            <li class="page-item"><a href="@link?page=@ViewBag.Next" title="Trang sau"><i class="fa fa-angle-right"></i></a></li>
+                            <li class="page-item"><a href="@link?page=@ViewBag.Last" title="Trang cuối">Cuối</a></li>
+                        }
+                    </div>
+                @*</ul>*@
             </nav>
         }
         else
