--- a/Dido_Store_2/Views/Shared/_Layout.cshtml
+++ b/Dido_Store_2/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <div id="fb-root"></div>
     <script>
-    (function (d, s, id) {
+        (function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
             if (d.getElementById(id)) return;
             js = d.createElement(s); js.id = id;
@@ -52,16 +52,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="logo">
                     <a href="/"><img src="~/Assets/client/images/logo.jpg" alt="" /></a>
                 </div>
-                <div class="cart">
-                    <p>
-                        Welcome to our Online Store! <span>Cart:</span><div id="dd" class="wrapper-dropdown-2">
-                            0 item(s) - $0.00
-                            <ul class="dropdown">
-                                <li>you have no items in your Shopping cart</li>
-                            </ul>
-                        </div>
-                    </p>
-                </div>
+
+                @{Html.RenderAction("HeaderCart", "Home"); }
+
                 <script type="text/javascript">
                     function DropDown(el) {
                         this.dd = el;
@@ -77,7 +70,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             });
                         }
                     }
-                    
+
                     $(function () {
 
                         var dd = new DropDown($('#dd'));
@@ -88,6 +81,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         });
 
                     });
+
+                    
 
                 </script>
                 <div class="clear"></div>
@@ -176,10 +171,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <script type="text/javascript">
         $(document).ready(function () {
             $().UItoTop({ easingType: 'easeOutQuart' });
-
         });
     </script>
     <a href="#" id="toTop"><span id="toTopHover"> </span></a>
+    @RenderSection("jsFooter", false)
 </body>
 </html>
 
