--- a/Dido_Store_2/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/Dido_Store_2/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -253,6 +253,9 @@
                     <!-- /.nav-second-level -->
                 </li>
                 <li>
+                    <a href="/Admin/Order/Index">Hóa đơn</a>
+                </li>
+                <li>
                     <a href="/Admin/User/"><i class="fa fa-users fa-fw"></i> Người dùng</a>
 
                     <!-- /.nav-second-level -->
@@ -261,7 +264,8 @@
                     <a href="/Admin/Comment/"><i class="fa fa-comment fa-fw"></i> Bình luận</a>
 
                     <!-- /.nav-second-level -->
-                </li><li>
+                </li>
+                <li>
                     <a href="#"><i class="fa fa-gear fa-fw"></i> Hệ thống</a>
 
                     <!-- /.nav-second-level -->
