--- a/Dido_Store_2/Views/Shared/_Layout.cshtml
+++ b/Dido_Store_2/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="header_bottom">
                 <div class="menu">
                     <ul>
-                        <li class="active"><a href="/">Trang chủ</a></li>
+                        <li><a href="/">Trang chủ</a></li>
                         <li><a href="/gioi-thieu">Giới thiệu</a></li>
                         <li><a href="/san-pham">Sản phẩm</a></li>
                         <li><a href="#">Tin tức</a></li>
