--- a/Dido_Store_2/Views/Cart/Index.cshtml
+++ b/Dido_Store_2/Views/Cart/Index.cshtml
@@ -36,12 +36,33 @@
                     <td>@item.Product.ID</td>
                     <td>@item.Product.Name</td>
                     <td><img src="@item.Product.Image" width="100" alt="Alternate Text" /></td>
-                    <td class="text-danger">@item.Product.Price.GetValueOrDefault(0).ToString("N0")<u>đ</u></td>
-                    <td><input type="number" min="1" data-id="@item.Product.ID" class="txtQuantity text-center rounded" value="@item.Quantity" /></td>
-                    <td>@((item.Product.Price.GetValueOrDefault(0) * item.Quantity).ToString("N0"))<u>đ</u></td>
+                    <td class="text-danger">
+                        @if(item.Product.PromotionPrice.HasValue)
+                        {
+                            @item.Product.PromotionPrice.GetValueOrDefault(0).ToString("N0")<u>đ</u>
+                        }
+                        else
+                        {
+                            @item.Product.Price.GetValueOrDefault(0).ToString("N0")<u>đ</u>
+                        }
+                    </td>
+                    <td><input type="number" min="1"  data-id="@item.Product.ID" class="txtQuantity text-center rounded" value="@item.Quantity" /></td>
+                    <td>
+                        
+                        @if(item.Product.PromotionPrice.HasValue)
+                        {
+                            @((item.Product.PromotionPrice.GetValueOrDefault(0) * item.Quantity).ToString("N0"))<u>đ</u>
+                        }
+                        else
+                        {
+                            @((item.Product.Price.GetValueOrDefault(0) * item.Quantity).ToString("N0"))<u>đ</u>
+                        }
+
+                    </td>
                     <td><a href="#" class="btnDelete" data-id="@item.Product.ID"><i class="fa fa-2x fa-trash"></i></a></td>
                 </tr>
             }
+
             <tr>
                 <td></td>
                 <td></td>
