--- a/Dido_Store_2/Views/Home/Index.cshtml
+++ b/Dido_Store_2/Views/Home/Index.cshtml
@@ -49,19 +49,38 @@
         <div class="clear"></div>
     </div>
     <div class="section group d-flex justify-content-center">
-        
-        @foreach (var item in listNewsProducts)
+
+        @foreach(var item in listNewsProducts)
         {
-            var url = "/chi-tiet/" + item.Alias + "-" + item.ID; 
+            var url = "/chi-tiet/" + item.Alias + "-" + item.ID;
             <div class="grid_1_of_4 images_1_of_4 col-3">
                 <a href="@url"><img src="@item.Image" alt="@item.Name" /></a>
                 <h2>@item.Name</h2>
                 <div class="price-details">
                     <div class="price-number">
-                        <p><span class="rupees">@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")<u>đ</u></span></p>
+                        <p>
+                            <span class="rupees">
+                                @if(item.PromotionPrice.HasValue)
+                                {
+                                    <small> <strike>@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")</strike><u>đ</u></small>
+                                    @(item.PromotionPrice.HasValue ? item.PromotionPrice.Value.ToString("N0") : "")<u>đ</u>
+                                }
+                                else
+                                {
+                                    @(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")<u>đ</u>
+                                }
+                            </span>
+                        </p>
                     </div>
                     <div class="add-cart">
-                        <h4><a href="/them-gio-hang?productID=@item.ID&quantity=1">Add to Cart</a></h4>
+                        @if(item.Quantity > 0)
+                        {
+                            <h4><a href="/them-gio-hang?productID=@item.ID&quantity=1">Thêm vào giỏ</a></h4>
+                        }
+                        else
+                        {
+                            <h4><a>Tạm hết hàng</a></h4>
+                        }
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -78,7 +97,7 @@
         <div class="clear"></div>
     </div>
     <div class="section group">
-        @foreach (var item in listPromotionProducts)
+        @foreach(var item in listPromotionProducts)
         {
             var url = "/chi-tiet/" + item.Alias + "-" + item.ID;
             <div class="grid_1_of_4 images_1_of_4">
@@ -88,13 +107,27 @@
                     <div class="price-number">
                         <p>
                             <span class="rupees">
-                                <strike>@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")</strike><u>đ</u>
-                                @(item.PromotionPrice.Value.ToString("N0"))<u>đ</u>
+                                @if(item.PromotionPrice.HasValue)
+                                {
+                                    <small> <strike>@(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")</strike><u>đ</u></small>
+                                    @(item.PromotionPrice.HasValue ? item.PromotionPrice.Value.ToString("N0") : "")<u>đ</u>
+                                }
+                                else
+                                {
+                                    @(item.Price.HasValue ? item.Price.Value.ToString("N0") : "Liên hệ")<u>đ</u>
+                                }
                             </span>
                         </p>
                     </div>
                     <div class="add-cart">
-                        <h4><a href="/them-gio-hang?productID=@item.ID&quantity=1">Add to Cart</a></h4>
+                        @if(item.Quantity > 0)
+                        {
+                            <h4><a href="/them-gio-hang?productID=@item.ID&quantity=1">Thêm vào giỏ</a></h4>
+                        }
+                        else
+                        {
+                            <h4><a>Tạm hết hàng</a></h4>
+                        }
                     </div>
                     <div class="clear"></div>
                 </div>
