--- a/Dido_Store_2/Views/User/Register.cshtml
+++ b/Dido_Store_2/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-
+﻿
 <meta charset="utf-8" />
 ﻿@model Dido_Store_2.Models.RegisterModel
 @using BotDetect.Web.Mvc;
@@ -82,20 +82,22 @@
             </div>
 
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.BirthDay, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.BirthDay, new { @class = "form-control", @type = "date" })
-                @Html.ValidationMessageFor(model => model.BirthDay, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.BirthDay, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.BirthDay, new { @class = "form-control", @type = "date" })
+                    @Html.ValidationMessageFor(model => model.BirthDay, "", new { @class = "text-danger" })
+                </div>
             </div>
 
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Gender, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.Gender, new SelectList(new List<string>() { "Nam", "Nữ", "Khác" }), new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Gender, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.Gender, new SelectList(new List<string>() { "Nam", "Nữ", "Khác" }), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
+                </div>
             </div>
+
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
